--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "docsify-echarts-plugin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "docs": "docsify serve ./docs"
+    "docs": "docsify serve ./docs",
+    "dev": "rollup --config ./rollup.dev.conf.js -w",
+    "prop": "rollup --config ./rollup.prop.conf.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,14 @@
   },
   "homepage": "https://github.com/xiguaxigua/docsify-echarts-plugin#readme",
   "devDependencies": {
-    "docsify-cli": "^4.1.12"
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "docsify-cli": "^4.1.12",
+    "rollup": "^0.52.1",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
