--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docsify-echarts-plugin",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "lib/index.min.js",
   "scripts": {
     "docs": "docsify serve ./docs",
     "dev": "rollup --config ./build/rollup.dev.conf.js -w",
