--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "docsify-cli": "^4.1.12",
+    "marked": "^0.3.9",
     "rollup": "^0.52.1",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
